--- a/test/css/index.css
+++ b/test/css/index.css
@@ -21,7 +21,12 @@ body {
 	margin-top: 12px;
 	width: 100%;
 }
-
+.time-input {
+	line-height: 40px;
+	padding-left: 12px;
+	border-radius: 4px;
+	border: 1px solid #d8d8d8;
+}
 .slide-ud-enter-active {
 	animation: slide .3s ease-out;
 	transform-origin: 0 0;
@@ -33,6 +38,23 @@ body {
 @keyframes slide {
 	0% {
 		transform: scale(1,0);
+	}
+	100% {
+		transform: scale(1,1);
+	}
+}
+.left-open-close-enter-active {
+	animation: slide-lr .3s ease-out;
+	transform-origin: 0 0;
+}
+.left-open-close-leave-active {
+	animation: slide-lr .2s ease-out reverse;
+	transform-origin: 0 0;
+}
+
+@keyframes slide-lr {
+	0% {
+		transform: scale(0,1);
 	}
 	100% {
 		transform: scale(1,1);
